--- a/Snowboarder/UserSettings/Search.settings
+++ b/Snowboarder/UserSettings/Search.settings
@@ -11,6 +11,9 @@ scopes = {
 	"last_search.FD7A1EDD" = "ref=\"/Barry\""
 	"OpenInspectorPreview.FD7A1EDD" = "0"
 	"currentGroup.FD7A1EDD" = "all"
+	"last_search.310DEAF3" = "h:#checkpoint="
+	"OpenInspectorPreview.310DEAF3" = "0"
+	"currentGroup.310DEAF3" = "all"
 }
 providers = {
 	adb = {
